Wed Aug 17 15:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
	  add a new function for raising error when an object cannot coerce
	  into BigDecimal.  [Bug #5172]

	* ext/bigdecimal/bigdecimal.c (BigDecimalValueWithPrec): use
	  cannot_be_coerced_into_BigDecimal function.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): ditto.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): ditto.

	* test/bigdecimal/test_bigdecimal.rb: test for the avobe changes.

	* test/bigdecimal/testbase.rb (under_gc_stress): add a new utility
	  method to run tests under the condition of GC.stress = true.

Wed Aug 17 10:16:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (nurat_coerce): Rational#coerce should converts itself
	  into Complex if the argument is a Complex with non-zero imaginary
	  part.  [Bug #5020] [ruby-dev:44088]

	* test/ruby/test_rational.rb (test_coerce): test for the above change.

Wed Aug 17 06:33:19 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_x509cert.c: Add class documentation for
	  OpenSSL::X509::Certificate.

Wed Aug 17 04:54:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_pkey.c: corrected docs, OpenSSL::PKey::DH does
	  *not* support #sign/verify.

Tue Aug 16 18:56:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_threadptr_data_type): rename to hide.
	  [ruby-core:38972]

Tue Aug 16 18:52:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/mkexports.rb (Exports::Mswin#each_export): exclude Init_
	  and _threadptr_ functions, as well as mingw.

Tue Aug 16 09:31:44 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/dl:  Add documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #5192]

Tue Aug 16 08:48:26 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/.document (fiddle):  Remove duplicate entry
	* ext/fiddle:  Complete documentation of Fiddle.  Patch by Vincent
	  Batts.  [#5192]
