@@ -1,3 +1,8 @@
+Wed Aug 17 23:01:00 2011  Kenta Murata  <mrkn@mrkn.jp>
+
+	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
+	  remove duplication.
+
 Wed Aug 17 15:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>
 
 	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
